--- a/index.html
+++ b/index.html
@@ -47,23 +47,15 @@
 <body>
 	<!--완성된 pdf 이미지를 1320크기로 뽑아서, 죽 나열하시면 됩니다!-->
 	<div id="top">
-		<img src="./images/3.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/4.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/5.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/6.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/7.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/8.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/9.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/10.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/11.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/12.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/13.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/14.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/15.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/16.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/17.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		<img src="./images/18.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
-		
+		<img src="./images/19.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/20.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/21.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/22.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/23.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/24.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/25.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/26.jpg" class="guide1"><!--가이드 이미지 경로 지정하기-->
+		<img src="./images/27.jpg" class="guide1">
 	</div>
 	<div class="fixed_box">
 		<a href="#top" class="top_btn"><!--href부분은 이미지를 감싼 div에 있는 id이름과 동일하게 설정.-->
